fix(BundleAssets): Wrap label to prevent overflow

--- a/src/components/bundle-assets/bundle-assets.module.css
+++ b/src/components/bundle-assets/bundle-assets.module.css
@@ -84,3 +84,12 @@
 .tooltipTable th {
   padding: 0 var(--space-xxxsmall) 0 0;
 }
+
+.label {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-all;
+  word-break: break-word;
+  hyphens: auto;
+  white-space: normal;
+}
